src/objects/CRA_Goal__c.object
<CustomObject>
    <fields>
        <fullName>CRA__c</fullName>
        <label>CRA</label>
        <referenceTo>CRA__c</referenceTo>
        <relationshipLabel>CRA_Goals</relationshipLabel>
        <relationshipName>CRA_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <formula>New_Score__c - First_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Score__c</fullName>
        <formula>VALUE(CASE( Problem_Areas_goals__c , 
&quot;Health &amp; self care&quot;, TEXT( CRA__r.X1_Health_self_care__c ),
&quot;Cannabis use/non use&quot;, TEXT( CRA__r.X2a_Substance_use__c ),
&quot;Alcohol use/non use&quot;, TEXT(  CRA__r.X2b__c  ),
&quot;Other drug use/non use&quot;, TEXT(  CRA__r.X2c_Other_drug_use_non_use__c  ),
&quot;Relationships with Partner&quot;, TEXT( CRA__r.X3a_Relationships_with_Partner__c ),
&quot;Relationships with friends&quot;, TEXT( CRA__r.X3b_Relationshipsfriends__c  ),
&quot;Relationships with Parents/caregiver&quot;, TEXT( CRA__r.X3c_Relationships_with_Parents__c ),
&quot;Job or education progress&quot;, TEXT(CRA__r.X4_Job_or_education_progress__c ),
&quot;Social Activities&quot;, TEXT(CRA__r.X5_Social_Activities__c ),
&quot;Recreational activities&quot;, TEXT(CRA__r.X6_Recreational_activities__c), 
&quot;Personal habits (e.g. getting up in the morning, being on time)&quot;, TEXT(CRA__r.X7_Personal_habits__c ),
&quot;Legal issues&quot;, TEXT(CRA__r.X8_Legal_issues__c ),
&quot;Money management&quot;, TEXT(CRA__r.X9_Money_management__c ),
&quot;Emotional life (feelings)&quot;, TEXT(CRA__r.X10_Emotional_life_feelings__c ),
&quot;Communication&quot;, TEXT(CRA__r.X11_Communication__c ),
&quot;General happiness&quot;, TEXT(CRA__r.X12_General_happiness__c ),
&quot;Motivation&quot;, TEXT(CRA__r.X13_Motivation__c ),
&quot;Other&quot;, TEXT(CRA__r.X14_Other__c ),
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Score__c</fullName>
        <label>New Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Areas_goals__c</fullName>
        <label>Problem Areas/goals</label>
        <picklist>
            <picklistValues>
                <fullName>Health &amp; self care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannabis use/non use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol use/non use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other drug use/non use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships with Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships with friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships with Parents/caregiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job or education progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreational activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal habits (e.g. getting up in the morning, being on time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotional life (feelings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General happiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_by_Step_Plan__c</fullName>
        <label>Step by Step Plan</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Frame__c</fullName>
        <label>Time Frame</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>CRA Goal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRA Goal-{DDMMYY}-{0000}</displayFormat>
        <label>CRA Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRA_Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>